--- a/elements/gotham-logo/package.json
+++ b/elements/gotham-logo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@gotham/phoenix-logo",
+  "name": "@gotham/gotham-logo",
   "version": "1.0.3",
   "main": "index.js",
   "license": "MIT",
