converted monorepo to wcf factory

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
-lerna-debug.json
+node_modules/
+.DS_Store
+lerna-debug.log
+*.local.umd.js
+*.local.js
+.storybook_out
+npm-debug.log
+test/.wct-kludge
+.sass-cache
+.yo-rc.json
+yarn.lock
+*-*.tgz
+package-lock.json
+analysis.json
+yarn-error.log
+.cache
