--- a/elements/gotham-logo/package.json
+++ b/elements/gotham-logo/package.json
@@ -1,14 +1,51 @@
 {
   "name": "@gotham/gotham-logo",
-  "version": "0.0.5",
-  "main": "gotham-logo.js",
-  "license": "MIT",
-  "dependencies": {
-    "@babel/core": "7.1.0"
+  "wcfactory": {
+    "className": "GothamLogo",
+    "customElementClass": "HTMLElement",
+    "elementName": "gotham-logo",
+    "generator-wcfactory-version": "0.6.5",
+    "useHAX": false,
+    "useSass": false,
+    "files": {
+      "css": "src/gotham-logo.css",
+      "scss": "src/gotham-logo.scss",
+      "html": "src/gotham-logo.html",
+      "js": "src/gotham-logo.js",
+      "properties": "src/gotham-logo-properties.json",
+      "hax": "src/gotham-logo-hax.json"
+    }
   },
-  "gitHead": "c3f321677497ef826b258e448f3b927fb884daf1",
+  "version": "0.0.0",
+  "description": "",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:heyMP/gotham-main.git"
+  },
+  "main": "gotham-logo.js",
+  "module": "gotham-logo.es6.js",
+  "umd": "gotham-logo.umd.js",
+  "amd": "gotham-logo.amd.js",
+  "scripts": {
+    "test": "../../node_modules/.bin/wct --configFile ../../wct.conf.json node_modules/@gotham/gotham-logo/test/",
+    "start":"yarn run dev","build":"../../node_modules/.bin/gulp && ../../node_modules/.bin/rollup -c && ../../node_modules/.bin/prettier --ignore-path ../../.prettierignore --write '**/*.{js,json}'","dev":"concurrently --kill-others \"yarn run watch\" \"yarn run serve\"","watch":"../../node_modules/.bin/gulp dev","serve":"polymer serve --npm --module-resolution=node --open","lighthouse":"../../node_modules/.bin/gulp lighthouse"
+  },
+  "author": {
+    "name": "heyMP"
+  },
+  "license": "Apache-2.0",
+  "dependencies": {
+    
+  },
+  "devDependencies": {
+    "web-animations-js":"2.3.1","@lrnwebcomponents/deduping-fix":"0.2.0","@polymer/iron-demo-helpers":"3.0.2","@polymer/iron-component-page":"github:PolymerElements/iron-component-page","@webcomponents/webcomponentsjs":"2.2.4","concurrently":"4.1.0","gulp-babel":"8.0.0","gulp-sourcemaps":"2.6.4","lodash":"4.17.11","polymer-cli":"1.9.5","polymer-build":"3.1.1","wct-browser-legacy":"1.0.2"
+  },
   "private": false,
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "keywords": [
+    "web-components",
+    "html"
+  ]
 }
